book/tests/snapshots/snapshot__run_display_reference_prql@transforms__window-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/window-0.prql
---
from employees
group employee_id (
  sort month
  window rolling:12 (
  derive [trail_12_m_comp = sum paycheck]
)
)



